--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
     </style>
 </head>
-<body>
+<body style="margin:0px;">
   <script src="js/phaser.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/game.js"></script>
