--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="js/phaser.js"></script>
     <script src="js/gameover.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/help.js"></script>
     <script src="js/game.js"></script>
     
     
